--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(plasma-browser-integration)
+project(mpris-browser-integration)
 set(PROJECT_VERSION "5.15.80")
 set(PROJECT_VERSION_MAJOR 5)
 
 set(QT_MIN_VERSION "5.9.0")
-set(KF5_MIN_VERSION "5.42.0")
 
-find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
-set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})
-
-include(KDEInstallDirs)
-include(KDECMakeSettings)
-include(KDEFrameworkCompilerSettings NO_POLICY_SCOPE)
 include(FeatureSummary)
 
 find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS
@@ -21,22 +14,10 @@ DBus
 Widgets
 )
 
-find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS
-    KIO
-    I18n
-    Config
-    DBusAddons
-    Notifications
-    Runner
-    Activities
-)
-
 add_definitions(-DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT)
 #add_definitions(-DQT_DISABLE_DEPRECATED_BEFORE=0x060000)
 
 # Options
-option(INSTALL_CHROME_MANIFEST "Whether to install a configuration file that makes Chrome automatically download the extension from the store" FALSE)
-add_feature_info(INSTALL_CHROME_MANIFEST ${INSTALL_CHROME_MANIFEST} "Install extension from Chrome store automatically")
 
 # in ubuntu and derivatives, this should be installed in the chromium-browser/extensions,
 # but since this is distribution specific path, let's use what upstream uses
@@ -51,8 +32,6 @@ set(MOZILLA_DIR "${CMAKE_INSTALL_PREFIX}/lib/mozilla" CACHE STRING "Mozilla dire
 add_feature_info(MOZILLA_DIR On "Mozilla directory is '${MOZILLA_DIR}'")
 
 add_subdirectory(host)
-add_subdirectory(tabsrunner)
-add_subdirectory(reminder)
 
 if(NOT DEFINED CHROME_EXTENSION_ID)
     # The extension ID is based on the key used to sign the extension
@@ -62,28 +41,15 @@ endif()
 
 # TODO configure manifest.json
 
-configure_file(org.kde.plasma.chrome_integration.json.in org.kde.plasma.chrome_integration.json @ONLY)
-configure_file(org.kde.plasma.firefox_integration.json.in org.kde.plasma.firefox_integration.json @ONLY)
+configure_file(com.github.rgeorgiev583.mpris.chrome_integration.json.in com.github.rgeorgiev583.mpris.chrome_integration.json @ONLY)
+configure_file(com.github.rgeorgiev583.mpris.firefox_integration.json.in com.github.rgeorgiev583.mpris.firefox_integration.json @ONLY)
 
-# #chromium
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.kde.plasma.chrome_integration.json DESTINATION ${KDE_INSTALL_FULL_SYSCONFDIR}/chromium/native-messaging-hosts/ RENAME org.kde.plasma.browser_integration.json)
-# #google-chrome
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.kde.plasma.chrome_integration.json DESTINATION ${KDE_INSTALL_FULL_SYSCONFDIR}/opt/chrome/native-messaging-hosts/ RENAME org.kde.plasma.browser_integration.json)
-# firefox
-
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.kde.plasma.firefox_integration.json DESTINATION ${MOZILLA_DIR}/native-messaging-hosts/ RENAME org.kde.plasma.browser_integration.json)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/com.github.rgeorgiev583.mpris.firefox_integration.json DESTINATION ${MOZILLA_DIR}/native-messaging-hosts/ RENAME com.github.rgeorgiev583.mpris.browser_integration.json)
 
 if (COPY_MESSAGING_HOST_FILE_HOME)
-    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.kde.plasma.firefox_integration.json DESTINATION $ENV{HOME}/.mozilla/native-messaging-hosts/ RENAME org.kde.plasma.browser_integration.json)
-    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.kde.plasma.chrome_integration.json DESTINATION $ENV{HOME}/.config/chromium/NativeMessagingHosts/ RENAME org.kde.plasma.browser_integration.json)
-    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.kde.plasma.chrome_integration.json DESTINATION $ENV{HOME}/.config/google-chrome/NativeMessagingHosts/ RENAME org.kde.plasma.browser_integration.json)
-endif()
-
-if (INSTALL_CHROME_MANIFEST) # Install a policy to have browsers automatically add the extension
-    # google-chrome
-    install(FILES chrome_install_from_store_policy DESTINATION ${KDE_INSTALL_DATADIR}/google-chrome/extensions RENAME ${CHROME_EXTENSION_ID}.json)
-    # chromium
-    install(FILES chrome_install_from_store_policy DESTINATION ${KDE_INSTALL_DATADIR}/${CHROMIUM_EXTENSIONS_DIR}/extensions RENAME ${CHROME_EXTENSION_ID}.json)
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/com.github.rgeorgiev583.mpris.firefox_integration.json DESTINATION $ENV{HOME}/.mozilla/native-messaging-hosts/ RENAME com.github.rgeorgiev583.mpris.browser_integration.json)
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/com.github.rgeorgiev583.mpris.chrome_integration.json DESTINATION $ENV{HOME}/.config/chromium/NativeMessagingHosts/ RENAME com.github.rgeorgiev583.mpris.browser_integration.json)
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/com.github.rgeorgiev583.mpris.chrome_integration.json DESTINATION $ENV{HOME}/.config/google-chrome/NativeMessagingHosts/ RENAME com.github.rgeorgiev583.mpris.browser_integration.json)
 endif()
 
 # TODO firefox
