cmake: host: fix build (compilation) errors by adding the appropriate include dirs for autogenerated DBus adaptor source files

--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -9,6 +9,7 @@ set(HOST_SOURCES main.cpp
 qt5_add_dbus_adaptor(HOST_SOURCES ../dbus/org.mpris.MediaPlayer2.xml mprisplugin.h MPrisPlugin mprisroot MPrisRoot)
 qt5_add_dbus_adaptor(HOST_SOURCES ../dbus/org.mpris.MediaPlayer2.Player.xml mprisplugin.h MPrisPlugin mprisplayer MPrisPlayer)
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 add_executable(mpris-browser-integration-host ${HOST_SOURCES})
 target_link_libraries(
     mpris-browser-integration-host
