cmake: host: fix build (linking) errors by enabling the automatic running of MOC

--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -1,5 +1,7 @@
 include(GNUInstallDirs)
 
+set(CMAKE_AUTOMOC ON)
+
 set(HOST_SOURCES main.cpp
                 connection.cpp
                 mprisplugin.cpp
